@@ -13,7 +13,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclCmdMZ.c,v 1.36 2001/04/24 20:59:17 kennykb Exp $
+ * RCS: @(#) $Id: tclCmdMZ.c,v 1.37 2001/05/14 08:57:26 dkf Exp $
  */
 
 #include "tclInt.h"
@@ -1267,6 +1267,12 @@ Tcl_StringObjCmd(dummy, interp, objc, objv)
 		} else if (start > 0) {
 		    ustring2 += start;
 		    length2  -= start;
+		} else if (start < 0) {
+		    /*
+		     * Invalid start index mapped to string start;
+		     * Bug #423581
+		     */
+		    start = 0;
 		}
 	    }
 
